--- a/index.html
+++ b/index.html
@@ -7,29 +7,33 @@
 </head>
 <body>
     <main>
-        <section id= “container”>
+        <section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
-            
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é JavaScript?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O JavaScript é uma linguagem de programação
+                    </div>
                 </div>
-            </article>  
+            </article>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                        O que é CSS?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O CSS é uma linguagem de estilização
+                    </div>
+                </div>
+            </article>
+        </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
     </footer>
-    <main>
-        
-    </section>
 </body>
 </html>
-
-
-<h3> Programação </h3>
-
-<div class="cartao__conteudo__pergunta">
-    O que é Java Script?
-    </div>
-
-    <div class="cartao__conteudo__resposta">
-        O Java Script é uma linguagem de programação.
-        </div>
